<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mekkemon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hinttext">店名・ジャンル・キーワード</string>
    <string name="ba">天神・中州</string>
    <string name="kensaku">検索</string>
    <string name="tenmei">店名</string>
    <string name="misetuika">お店の追加</string>
    <string name="jusyo">住所</string>
    <string name="eria">エリア</string>
    <string name="banti">番地</string>
    <string name="janru">ジャンル</string>
    <string name="syasin">写真</string>
    <string name="komento">コメント</string>
    <string-array name="tdhk">
        <item >北海道</item>
        <item >青森県</item>
        <item >岩手県</item>
        <item >宮城県</item>
        <item >秋田県</item>
        <item>山形県</item>
        <item >福島県</item>
        <item >茨城県</item>
        <item >栃木県</item>
        <item >群馬県</item>
        <item >埼玉県</item>
        <item >千葉県</item>
        <item >東京都</item>
        <item >神奈川県</item>
        <item >新潟県</item>
        <item >富山県</item>
        <item >石川県</item>
        <item >福井県</item>
        <item >山梨県</item>
        <item >長野県</item>
        <item >岐阜県</item>
        <item >静岡県</item>
        <item >愛知県</item>
        <item >三重県</item>
        <item >滋賀県</item>
        <item >京都県</item>
        <item >大阪府</item>
        <item >兵庫県</item>
        <item >奈良県</item>
        <item >和歌山県</item>
        <item >鳥取県</item>
        <item >島根県</item>
        <item >岡山県</item>
        <item >広島県</item>
        <item >山口県</item>
        <item >徳島県</item>
        <item >香川県</item>
        <item >愛媛県</item>
        <item >高知県</item>
        <item >福岡県</item>
        <item >佐賀県</item>
        <item >長崎県</item>
        <item >熊本県</item>
        <item >大分県</item>
        <item >宮崎県</item>
        <item >鹿児島県</item>
        <item >沖縄県</item>
    </string-array>

	<string name="tsuika">追加</string>
</resources>
